Add two more recipes in index.html and edit embutido.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/embutido.html">Embutido Cordon Bleu</a>
+    <ul>
+      <li><a href="recipes/embutido.html">Embutido Cordon Bleu</a></li>
+      <li><a href="recipes/maxs-fried-chicken.html">Max's style Fried Chicken</a></li>
+      <li><a href="recipes/chicken-curry.html">Chicken Curry</a></li>
+    </ul>
   </body>
 </html>
